Fix service classes